--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
 sudo: required
 language: cpp
+compiler: gcc
+dist: trusty
+
+before_install:
+  # C++17
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install: 
+  # C++17
+  - sudo apt-get install -qq g++-6
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+
 os:
   - linux
-  - osx
+
 compiler:
   - g++
   - clang
